# weather-station

./: .gitignore  Dockerfile
client/: gleam.toml  index.html  manifest.toml
client/src/: client.gleam
client/src/view/: card.gleam  view.gleam
client/src/view/svgs/: svgs.gleam
client/test/: client_test.gleam
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
server/: gleam.toml  manifest.toml  weather_station.db
server/bruno/: Get home.bru  Send a weather report.bru  bruno.json  fetch weather report.bru
server/src/: app.gleam  server.gleam
server/src/weather_station/: context.gleam  router.gleam
shared/: gleam.toml  manifest.toml
shared/src/: weather_report.gleam
